Update fonts, fix thank you page, remove color cycle, fix project spacing

--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -1,8 +1,11 @@
 .btn {
+  font-family: $proxima-nova;
   border: 0;
   font-size: 1rem;
   margin-top: .5rem;
   margin-bottom: .5rem;
+  padding-left: 20px;
+  padding-right: 20px;
   transition: .3s all;
 }
 .btn:hover {
