--- a/_sass/structure.scss
+++ b/_sass/structure.scss
@@ -24,7 +24,10 @@ img {
  */
 
 .card {
+  display: inline-block;
   padding-bottom: 1.5rem;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 /*
