--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -7,7 +7,7 @@ html {
   }
 }
 body {
-  font-family: "proxima-nova-soft", sans-serif;
+  font-family: $proxima-nova;
   font-size: 1em;
   line-height: 1.35;
   color: $white;
@@ -25,6 +25,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: $sharik-sans;
   margin-top: 1.5rem;
   margin-bottom: .5rem;
   font-size: 1rem;
