--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,4 +5,7 @@ $ocean: #163D59;
 $red: #D9482B;
 $yellow: #F2C53D;
 $green: #53A668;
-$blue: #30A7BF; 
+$blue: #30A7BF;
+
+$sharik-sans: "sharik-sans", sans-serif;
+$proxima-nova: "proxima-nova", sans-serif;
